# calderr-ai-2026

./: .gitignore  01_first_llm_call.ipynb  README.md  explore.py  main.py  pyproject.toml  rag_chain.py  requirements.txt  research_assistant.py
documents/: ai_notes.txt
labs/: cot_pipeline.py  multi_tool_agent.py  prompt_ab_test.py  rag_chain.py  react_agent.py  structured_extractor.py  test_groq.py
project-1-ia/: README.md  chatbot.py
project-1-pc/: README.md
