[project]
name = "calderr-ai-2026"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3",
    "langchain-groq>=0.1",
    "langchain-community>=0.3",
    "langgraph>=0.2",
    "groq>=0.11",
    "openai>=1.50",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
    "httpx>=0.27",
    "rich>=13.0",
    "typer>=0.12",
    "pytest>=8.0",
    "jupyter>=1.0",
    "streamlit>=1.35",
]

[tool.uv]
dev-dependencies = []
